Changes for 1.8.0.0
* Adding some more pre-industrial sounds. (pulicat)

* Allowed muting of custom aa gun sounds and custom notification, victory, and defeat sounds. (veqryn)

* Created resource image factory for making images and icons of resources. (veqryn)

* Fixed user interface to allow purchasing resources. (veqryn)

* Fixing engine to allow purchase rules for purchasing resources. (veqryn)

* Fixed memory leak in repair rules for repairing factories. (veqryn)

* Creating a menu option in the "File" menu called "Post PBEM/PBF Gamesave...", which will for pbem games post/email the savegame to the forum, without having to wait for the end turn phase. (veqryn)

* Changing trigger "notification" to use "players". (veqryn)

* Changing unit attachment property, "repairsUnits", to allow multiple and to have repair values associated with each unit, thereby allowing units to be repaired by X amount each turn. (veqryn)

* Created new unitPlacement attribute, "unitDamage", which will let a unit start with bombing factory damage. (veqryn)

* Created new unitPlacement attribute, "hitsTaken", which will let a unit start damaged. (veqryn)

* Deleting game option property, "SBR Affects Unit Production", and simplifying the engine to only use direct unit damage. (veqryn)

* Getting units with different bombing unit damage to not stack. (veqryn)

* Allowing selection of casualties for multiple hit units to allow damage points past one. (veqryn)

* Getting "hitPoints" to work in the graphical user interface. (veqryn)

* Getting "hitPoints" to work on the back end inside the engine. (veqryn)

* Created new unit attachment property, "hitPoints", which sets the number of hitpoints a unit has, and also deleted property "isTwoHit". (veqryn)

* Allowing sounds to be played by trigger, by putting "_sounds" after a duplicate of the Notification message key, with the value equal to "notification_" or "victory_" or "defeat_" + the sound key found in the sounds.properties file. (veqryn)
