@@ -1,4 +1,10 @@
 Changes for 1.8.0.0
+* Allowed 1940's paratroopers tech (ariborne combat) to move to / attack territories that have been blitz or already conquered this turn. (veqryn)
+
+* Allowed 1940's paratroopers tech (airborne combat) to move from allied bases, and to allow travel over water. (veqryn)
+
+* Created new step properties for special move delegates, "airborneMove", which controls if it is an Airborne Combat move phase. (veqyrn)
+
 * Adding some more pre-industrial sounds. (pulicat)
 
 * Allowed muting of custom aa gun sounds and custom notification, victory, and defeat sounds. (veqryn)
